Show creator info

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         <div class="imageContainer">
             <button class="refresh">Refresh</button>
             <img src="#" alt="" class="image">
+            <p>Created by Diego Samayoa. Check my <a href="https://github.com/DiegoSamayoaGomez">GitHub</a></p>
+
         </div>
+
     </div>
 
 </body>
